--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="This website is an example to practice.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./segunda_estilo.css" />
+        <link rel="stylesheet" href="./stylesheets/segunda_estilo.css" />
         <link href="https://fonts.googleapis.com/css?family=Libertine" rel="stylesheet">
     </head>
     
