Incorporadas mas tecnologias

--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
                 <img src="./images/icons/PostgresSQL.svg" alt="Git" title="Git">
                 <img src="./images/icons/Linux.svg" alt="Git" title="Git">
                 <img src="./images/icons/LaTeX.svg" alt="Git" title="Git">
+                <img src="./images/icons/GitHub.svg" alt="Git" title="Git">
+                <img src="./images/icons/GitHub Actions.svg" alt="Git" title="Git">
             </div>
         </section>
 
