Agregado el cv modificado.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Álvaro Monforte Marín | Physicist | Data Scientist | Machine Learning Engineer">
+    <meta name="description" content="Álvaro Monforte Marín | Data Scientist | Physicist | Machine Learning Engineer | AI Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Álvaro Monforte Marín | Physicist & Data Scientist</title>
@@ -25,7 +25,7 @@
                     <span class="en">Home</span>
                     <span class="es">Inicio</span>
                 </a>
-                <a href="./docs/monfortemarinalvaro_cv_120623.pdf" target="_blank" rel="noopener">CV</a>
+                <a href="./docs/alvaromonfortemarin_cv_280225.pdf" target="_blank" rel="noopener">CV</a>
                 <a href="#projects">
                     <span class="en">Projects</span>
                     <span class="es">Proyectos</span>
